# Bokuno-Editor

./: .gitignore  BUILD.md  Bokuno-Editor Desing.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  settings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows-shell/: installer-hooks.nsh  register-context-menu.ps1  unregister-context-menu.ps1
src/components/: CsvEditor.css  CsvEditor.tsx  Editor.css  Editor.tsx  FileTree.css  FileTree.tsx  Icon.tsx  MarkdownPreview.css  MarkdownPreview.tsx  SearchPanel.css  SearchPanel.tsx  SearchResultsView.css  SearchResultsView.tsx
src/utils/: lineEndings.test.ts  lineEndings.ts
