[package]
name = "Bokuno-Editor"
version = "0.1.4"
description = "A Text Editor"
authors = ["t1048"]
license = "MIT"
repository = "https://github.com/t1048/Bokuno-Editor.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
ignore = "0.4"
regex = "1.10"
tokio = { version = "1.35", features = ["rt-multi-thread", "fs", "time"] }
encoding_rs = "0.8"
chardetng = "0.1.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Windowsでコンソールウィンドウを非表示にする設定
[package.metadata.windows]
subsystem = "windows"
